# pacbrew

./: .gitignore  Cargo.toml  README.md
cache/: pactree.conf
crates/cli/: Cargo.toml  pacbrew.default.toml
crates/cli/src/: config.rs  formula.rs  main.rs  meta.rs  relocation.rs
crates/cli/src/cli/: list.rs  mod.rs  update.rs
crates/cli/src/command/: doctor.rs  download.rs  import.rs  install.rs  list.rs  mod.rs  remove.rs  tree.rs  update.rs  upgrade.rs
crates/cli/src/io/: mod.rs  progress.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: db.rs  error.rs  lib.rs  progress.rs
crates/core/src/io/: fetch.rs  http.rs  mod.rs  read.rs  relocate.rs  remote.rs  untar.rs
crates/core/src/package/: formula.rs  mirror.rs  mod.rs  package.rs
crates/core/src/stage/: download.rs  link.rs  mod.rs  probe.rs  resolve.rs  unpack.rs  update_db.rs  verify.rs
crates/core/src/ui/: bar.rs  event.rs  mod.rs  tracker.rs
pkg-post/: node.sh  openssl@3.sh
scripts/: ca-certificates.sh  node.sh  openssl@1.1.sh  test.py
src/: config.rs  formula.rs  main.rs  meta.rs  relocation.rs
src/cli/: add.rs  mod.rs  update.rs
src/io/: fetch.rs  mod.rs  package.rs  progress.rs
