[package]
name = "pacbrew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
log = "*"
flexi_logger = "*"
thiserror = "1.0"
futures = "0.3"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
serde_with = "2.0"
sha2 = "0.10.6"
clap = { version = "4.0", features=["derive"] }
reqwest = { version="*", features=["stream"] }
tokio = { version="1.0", features=["full"] }
toml = "0.5.9"
