[package]
name = "pacbrew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version="*", features=["backtrace"] }
log = "*"
flexi_logger = "*"
thiserror = "1.0"
futures = "0.3"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
serde_with = "2.0"
sha2 = "0.10.6"
clap = { version = "4.0", features=["derive"] }
reqwest = { version="*", features=["stream", "blocking", "brotli", "gzip"] }
tokio = { version="1.0", features=["full"] }
toml = "0.5.9"
indicatif = "0.17.1"
flate2 = "1.0.24"
tar = "0.4.38"
symlink = "0.1.0"
