[package]
name = "pacbrew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version="1.0", features=["backtrace"] }
log = "0.4"
flexi_logger = "0.27"
thiserror = "1.0"
futures = "0.3"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
serde_with = "3.7"
sha2 = "0.10.6"
clap = { version = "4.0", features=["derive"] }
reqwest = { version="0.11", features=["stream", "blocking", "brotli", "gzip", "deflate"] }
tokio = { version="1.0", features=["full"] }
toml = "0.8"
indicatif = "0.17.1"
flate2 = "1.0.24"
tar = "0.4.38"
symlink = "0.1.0"
mach_object = "0.1.17"
memmap = "0.7.0"
specs = { version = "0.20.0", features=["derive", "serde"] }
