[package]
name = "pacbrew-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-lib = { package = "pacbrew-core", path = "../core" }

dotenvy = "0.15.7"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.197", features = ["derive"] }
anyhow = "1.0.81"
