[package]
name = "pacbrew-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-lib = { package = "pacbrew-core", path = "../core" }

dotenvy = "0.15.7"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.197", features = ["derive"] }
anyhow = { version = "1.0.81", features = ["backtrace"] }
clap = { version = "4.5.3", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
lazy_static = "1.4.0"
indicatif = "0.17.8"
