[package]
name = "pacbrew-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
indicatif = "0.17.8"
reqwest = { version = "0.11.25", features = ["stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = { version = "3.7.0", features = ["chrono"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
tracing = "0.1.40"
url = "2.5.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
